--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "types": ["cypress"],
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "skipLibCheck": true,
