--- a/package.json
+++ b/package.json
@@ -70,8 +70,9 @@
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.21",
+    "babel-plugin-react-remove-properties": "^0.3.1",
     "cypress": "^12.17.4",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
